services/visualizer/k8s/visualizer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualizer
  namespace: stf
  labels:
    app: visualizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visualizer
  template:
    metadata:
      labels:
        app: visualizer
    spec:
      containers:
        - name: visualizer
          image: registry.dmz.home/kinga/stream-forge/visualizer:0.1.37
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: kafka-ca-volume
              mountPath: /usr/local/share/ca-certificates/ca.crt
              subPath: dev-ca.crt
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: kafka-ca-volume
          configMap:
            name: dev-ca-certificates
      serviceAccountName: full-access-sa # Assuming a service account with necessary permissions
      nodeSelector:
        streamforge-node: "true" # Assuming a node selector
