services/visualizer/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visualizer-service
  labels:
    app: visualizer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: visualizer
