services/visualizer/k8s/visualizer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visualizer-service
  namespace: stf
  labels:
    app: visualizer
spec:
  selector:
    app: visualizer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
