services/visualizer/k8s/visualizer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visualizer-ingress
  namespace: stf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: visualizer.dmz.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visualizer-service
                port:
                  number: 80
